# LEARN_RUST

./: .gitignore  README.md
ehrnig/: Cargo.toml
ehrnig-backend/ehrnig-v2/: Cargo.toml
ehrnig-backend/ehrnig-v2/src/: main.rs
ehrnig-backend/ehrnig-v2/src/auth/: authutils.rs  repository.rs  view.rs
ehrnig-backend/ehrnig-v2/src/infrastructures/: config.rs  db.rs  email.rs  redis.rs
ehrnig-backend/ehrnig-v2/src/jobs/: relay.rs
ehrnig-backend/ehrnig-v2/src/organizations/: handler.rs  repository.rs
ehrnig-backend/ehrnig-v2/src/routes/: mod.rs
ehrnig-backend/ehrnig-v2/src/users/: handler.rs  mod.rs  model.rs  repository.rs
ehrnig-backend/ehrnig-v2/src/utility/: constants.rs
ehrnig-backend/ehrnig-v2/templates/: login.html
ehrnig-backend/ehrnig-v3/: Cargo.toml
ehrnig-backend/ehrnig-v3/src/: main.rs
ehrnig/src/: main.rs
ehrnig/src/events/: model.rs
ehrnig/src/infrastructures/: config.rs  db.rs  mod.rs
ehrnig/src/jobs/: mod.rs  queue.rs  relay.rs  work.rs  workers.rs
ehrnig/src/organizations/: handler.rs  repository.rs
ehrnig/src/patients/: handler.rs  mod.rs  repository.rs
ehrnig/src/users/: model.rs
ehrnig/src/utility/: constants.rs  mod.rs  responses.rs
section1/hello_world/src/: main.rs
section10/enums/src/: main.rs
section10/project/src/: main.rs
section11/generics/src/: main.rs
section11/project/src/: main.rs
section12/option-result-enum/: Cargo.toml
section12/option-result-enum/src/: main.rs
section12/project/src/: main.rs
section13/project/src/: main.rs
section13/vector/src/: main.rs
section14/project/src/: lib.rs  main.rs
section14/warehouse/: Cargo.toml
section14/warehouse/src/: inventory.rs  lib.rs  main.rs
section15/project/src/: main.rs
section15/strings/src/: main.rs
section16/hashmaps/src/: main.rs
section16/project/src/: main.rs
section17/errorHandling/: Cargo.toml
section17/errorHandling/src/: main.rs
section17/project/src/: main.rs
section18/project/src/: main.rs
section18/trait3/: Cargo.toml
section18/trait3/src/: main.rs  utils.rs
section18/traits/src/: main.rs
section19/lifetimes/src/: main.rs
section19/project/src/: main.rs
section2/project/src/: main.rs
section2/variables_mutability/src/: main.rs
section20/closures/src/: main.rs
section20/project/src/: main.rs
section21/iterators/src/: main.rs
section21/project/src/: main.rs
section22/testing/src/: attraction.rs  lib.rs  management.rs  management2.rs
section22/testing/tests/: venue_mgt_test.rs
section3/dataTypes/src/: main.rs
section3/project/src/: main.rs
section4/functions/src/: main.rs
section4/project/src/: main.rs
section5/controlFlow/src/: main.rs
section5/project/src/: main.rs
(+44 files in other folders)
