[package]
name = "ehrnig"
version = "0.1.0"
edition = "2024"

[dependencies]
amq-protocol-types = "8.3"
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
deadpool-lapin = "0.12"
dotenvy = "0.15.7"
futures-util = "0.3.32"
lapin = "2.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "hostname", "smtp-transport", "builder"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-executor-trait = "3.1.0"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
